--- a/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
@@ -155,9 +155,10 @@ $(document).ready(function () {
                     @Html.EditorFor(model => model.lng, new { htmlAttributes = new { @class = "form-control", @id = "lng", @readonly = "readonly", @hidden = true } })
                     @Html.ValidationMessageFor(model => model.lng, "", new { @class = "text-danger" })
                 </div>
-
-                <img src="@Model.RutaImagen" class="mx-auto d-block" alt="" />
-
+                
+                <br />
+                <br />
+                    <img src="@Model.RutaImagen" class="responsive-img" alt="" />
                 <br />
                 <br />
 
