--- a/GlobalEvents/GlobalEvents/Views/Events/MapView.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/MapView.cshtml
@@ -5,8 +5,8 @@
 <br />
 <br />
 
-<h4>En el siguiente mapa usted encontrará los eventos en un radio de 2.5km desde su posición. 
-    Los mismos tienen hoy como fecha de inicio</h4>
+<blockquote>En el siguiente mapa usted encontrará los eventos en un radio de 20km desde su posición.
+    Los mismos tienen hoy como fecha de inicio</blockquote>
 
 <div id="map" style="width:100%;height:600px;"></div>
 
