--- a/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
@@ -170,6 +170,17 @@ $(document).ready(function () {
                         <input type="submit" value="Editar Evento" class="btn btn-default" />
                     </div>
                 </div>
+
+
+                <div class="fixed-action-btn horizontal click-to-toggle">
+                    <a class="btn-floating btn-large red">
+                        <i class="material-icons">menu</i>
+                    </a>
+                    <ul>
+                        <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+                        <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+                    </ul>
+                </div>
             </div>
         }
 
