--- a/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
@@ -206,7 +206,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p class="center-align">&copy; @DateTime.Now.Year - GlobalEvents.</p>
+            <p class="center-align">@DateTime.Now.Year - GlobalEvents.</p>
         </footer>
     </div>
 
