--- a/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
@@ -134,61 +134,27 @@
         </div>
         </div>
 
-
-
-
-        @*<!-- Modal Trigger -->
-            <a class="waves-effect waves-light btn" href="#modal1">Comentar</a>
-
-            <!-- Modal Structure -->
-            <div id="modal1" class="modal">
-                <div class="modal-content">
-                    <div class="input-field col s12">
-                        <textarea id="textarea1" class="materialize-textarea"></textarea>
-                        <label for="textarea1">Comentario</label>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Aceptar</a>
-                </div>
-            </div>
-
-            <script>
-                $(document).ready(function(){
-                    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-                    $('.modal').modal();
-                });
-            </script>
-
-            @*
-                @foreach (var a in Model.Comments)
-                {
-                    <div class="row">
-                        <div class="col s12 m12">
-                            <div class="card blue-grey darken-1">
-                                <div class="card-content white-text">
-                                    <p>
-                                        @a.Comentario
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                }*@
-
         <div id="comentariosDiv">
             @Html.Action("GetEventCommets", "Events", new { IdEvento = Model.ViewModel.Id })
         </div>
 
 
         <!--Hay que ver que sea el usuario que lo creo o algún administrador-->
-        @if (WebSecurity.IsAuthenticated)
+        @if (WebSecurity.IsAuthenticated && Model.ViewModel.IdUser == WebSecurity.CurrentUserId)
         {
-            <div class="fixed-action-btn">
-                <a class="btn-floating btn-large green" href="~/Events/Edit/@Model.ViewModel.Id">
-                    <i class="large material-icons">mode_edit</i>
+            <div class="fixed-action-btn horizontal click-to-toggle">
+                <a class="btn-floating btn-large green">
+                    <i class="material-icons">menu</i>
                 </a>
+                <ul>
+                    <li><a class="btn-floating red darken-1" href="~/Events/Delete/@Model.ViewModel.Id"><i class="material-icons">delete</i></a></li>
+                    <li><a class="btn-floating blue" href="~/Events/Edit/@Model.ViewModel.Id"><i class="material-icons">mode_edit</i></a></li>
+                </ul>
             </div>
+            <script>  $('.fixed-action-btn').openFAB();
+                $('.fixed-action-btn').closeFAB();
+                $('.fixed-action-btn.toolbar').openToolbar();
+                $('.fixed-action-btn.toolbar').closeToolbar();</script>
         }
 
 
