--- a/GlobalEvents/GlobalEvents/Views/Users/Details.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Details.cshtml
@@ -18,6 +18,10 @@
                 {
                     <div class="card-title left-align">@Model.Name @Model.Apellido</div>
                 }
+                else
+                {
+                    <div class="card-title left-align">@Html.getNameUser(Model.Id.ToString())</div>
+                }
                 <div class="form-group">
                     <div class="row">
                         @if (Model.Id == WebSecurity.CurrentUserId || Roles.IsUserInRole(WebSecurity.CurrentUserName, "Admin"))
@@ -96,3 +100,68 @@
         </div>
     </div>
 </div>
+
+@if (Model.UltimosEventos == null || Model.UltimosEventos.Count == 0)
+{
+    <div class="card">
+        <div class="card-content">
+            <div class="card-title">El usuario no creo eventos.</div>
+        </div>
+    </div>
+}
+else
+{
+    <div class="card">
+        <div class="card-content">
+            <div class="card-title">Últimos eventos creados.</div>
+            @foreach (var a in Model.UltimosEventos)
+            {
+                <div class="card">
+                    <div class="card-content">
+                        <div class="row">
+                            <div class="col s10 m10 l10">
+                                @a.NombreEvento
+                            </div>
+                            <div class="col s2 m2 l2 right-align">
+                                <a href="~/Events/Details/@a.Id" class="btn btn-default">
+                                    <i class="fa fa-search fa-fw black-text"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+}
+
+@if (Model.UltimosComentarios == null || Model.UltimosComentarios.Count == 0)
+{
+    <div class="card">
+        <div class="card-content">
+            <div class="card-title">El usuario no creo comentarios.</div>
+        </div>
+    </div>
+}
+else
+{
+    <div class="card">
+        <div class="card-content">
+            <div class="card-title">Últimos comentarios creados.</div>
+            @foreach (var a in Model.UltimosComentarios)
+            {
+                <div class="card">
+                    <a class="card-content black-text">
+                        <div class="card-title">
+                        @a.Comentario.Substring(0, a.Comentario.Length > 30 ? 30 : a.Comentario.Length)
+                        </div>
+                        <u>Evento:</u> @Html.getEvent(a.EventId.ToString())
+                        <div class="right-align">
+                            @a.Fecha
+                        </div>
+                    </a>
+                </div>
+            }
+        </div>
+    </div>
+}
