Agregado ShowPosition en events

--- a/GlobalEvents/GlobalEvents/Views/Events/MapView.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/MapView.cshtml
@@ -55,6 +55,7 @@
                     map: map,
                     title: 'Posición Predeterminada'
                 });
+                showPosition(pos);
             });
         } else {
             // Browser doesn't support Geolocation
@@ -69,6 +70,7 @@
                 map: map,
                 title: 'Posición Predeterminada'
             });
+            showPosition(pos);
         }
 
 
