--- a/GlobalEvents/GlobalEvents/Views/Events/MapView.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/MapView.cshtml
@@ -1,14 +1,53 @@
-﻿@{
+﻿@model RepositorioClases.SearchEvents
+
+@{
     ViewBag.Title = "Mapa";
 }
 
 <br />
 <br />
 
-<blockquote>En el siguiente mapa usted encontrará los eventos en un radio de 20km desde su posición.
-    Los mismos tienen hoy como fecha de inicio</blockquote>
+<blockquote>
+    En el siguiente mapa usted encontrará los eventos en un radio de 20km desde su posición.
+    Los mismos tienen hoy como fecha de inicio
+</blockquote>
 
 <div id="map" style="width:100%;height:600px;"></div>
+
+@using (Html.BeginForm("MapView", "Events", FormMethod.Get, new { id = "mapForm" }))
+{
+
+    <div class="row">
+        <div class="input-field col s6">
+            @Html.LabelFor(model => model.FechaDesde, htmlAttributes: new { @class = "active" })
+            @Html.EditorFor(model => model.FechaDesde, new { htmlAttributes = new { @class = "datepicker", @id = "FechaInicio" } })
+            @Html.ValidationMessageFor(model => model.FechaDesde, "", new { @class = "validate" })
+        </div>
+        <div class="input-field col s6">
+            @Html.LabelFor(model => model.FechaHasta, htmlAttributes: new { @class = "active" })
+            @Html.EditorFor(model => model.FechaHasta, new { htmlAttributes = new { @class = "datepicker", @id = "FechaFin" } })
+            @Html.ValidationMessageFor(model => model.FechaHasta, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+
+    <input type="hidden" name="lat" id="lat" />
+        <input type="hidden" name="lng" id="lng" />
+
+        <div class="col m3">
+            <input type="submit" value="Buscar" class="btn btn-primary" />
+        </div>
+
+
+}
+
+<script>
+        $('.datepicker').pickadate({
+            selectMonths: true, // Creates a dropdown to control month
+            selectYears: 15 // Creates a dropdown of 15 years to control year
+    });
+</script>
+
 
 <script>
     // Note: This example requires that you consent to location sharing when
@@ -17,6 +56,9 @@
     // locate you.
 
     function initMap() {
+
+        @*$("#FechaDesde").val(@Model.FechaDesde);
+        $("#FechaFin").val(@Model.FechaHasta);*@
 
         var map = new google.maps.Map(document.getElementById('map'), {
             center: { lat: -30.944932, lng: -61.562566 },
@@ -29,7 +71,7 @@
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(function (position) {
-                    pos = {
+                pos = {
                     lat: position.coords.latitude,
                     lng: position.coords.longitude
                 };
@@ -76,11 +118,16 @@
 
         function showPosition(position) {
             var data = [];
+            debugger;
+            $("#lat").val(position.lat);
+            $("#lng").val(position.lng);
+            var desde = $("#FechaInicio").val();
+            var hasta = $("#FechaFin").val();
             $.ajax({
                 url: "/Events/GetEventsForMap",
                 dataType: 'json',
                 async: false,
-                data: { 'lat': position.lat, 'lng': position.lng },
+                data: { 'lat': position.lat, 'lng': position.lng, 'fechadesde': desde, 'fechahasta': hasta },
                 success: function (info) {
                     info.forEach(function (x) {
                         var marker = new google.maps.Marker({
@@ -99,7 +146,7 @@
         }
     }
 
-    
+
 
     function handleLocationError(browserHasGeolocation, infoWindow, pos) {
         infoWindow.setPosition(pos);
@@ -113,6 +160,9 @@
 
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPHbsGCp8vpDA1vMKAFWsU0Odc8Mz5SAA&callback=initMap" async defer></script>
+
+
+
 
 
 
