Volviento patra' con el map view

--- a/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                         <li class="@Html.IsSelected(controllers: "Events", actions: "Mios", cssClass: "active")">@Html.ActionLink("Mis eventos", "Mios", "Events", new { area = "" }, null)</li>
                     }
                     <li class="@Html.IsSelected(controllers: "Events", actions: "Closed", cssClass: "active")">@Html.ActionLink("Finalizados", "Closed", "Events", new { area = "" }, null)</li>
-                    <li class="@Html.IsSelected(controllers: "Events", actions: "MapView", cssClass: "active")">@Html.ActionLink("Mapa", "MapView", "Events", new { area = "" }, new { })</li>
+                    <li class="@Html.IsSelected(controllers: "Events", actions: "MapView", cssClass: "active")">@Html.ActionLink("Mapa", "MapView", "Events", new { area = "" }, null)</li>
                 </ul>
 
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
