Probando sin los demas filtros, solo fecha de hoy

--- a/GlobalEvents/GlobalEvents/Views/Events/MapView.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/MapView.cshtml
@@ -6,8 +6,7 @@
 <br />
 
 <blockquote>
-    En el siguiente mapa usted encontrará los eventos en un radio de 20km desde su posición.
-    Los mismos tienen hoy como fecha de inicio
+    En el siguiente mapa usted encontrará los eventos que se llevará a cabo el día de hoy.
 </blockquote>
 
 <div id="map" style="width:100%;height:600px;"></div>
