Corregido error que al vovler atras volvia a usuario que inicio sesion en lugar de usuario que se estaba consultando

--- a/GlobalEvents/GlobalEvents/Views/Events/Intereses.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Intereses.cshtml
@@ -47,4 +47,4 @@
     </div>
 </div>
 
-@Html.ActionLink("Volver","Details", "Users", new { id = WebSecurity.CurrentUserId }, null) 
+@Html.ActionLink("Volver","Details", "Users", new { id = Model.IdUser }, null) 
